--- a/example/index.html
+++ b/example/index.html
@@ -3,8 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>GraphZ Example</title>
+    <style>
+        canvas {
+            margin-left: 100px;
+            border: 1px black solid;
+        }
+    </style>
 </head>
 <body>
-<canvas id="canvas" width="600" height="600" style="margin-left: 100px"></canvas>
+<canvas id="canvas" width="600" height="600"></canvas>
 </body>
 </html>
